// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withBannerAlertState(BpkBannerAlertDismissable) should render correctly 1`] = `
<BpkBannerAlertDismissable
  animateOnEnter={false}
  animateOnLeave={false}
  bannerClassName={null}
  dismissButtonLabel="Dismiss"
  expanded={false}
  message="Lorem ipsum dolor sit amet, consectetuer adipiscing elit."
  onDismiss={[Function]}
  onExpandToggle={[Function]}
  show={true}
  type="success"
/>
`;

exports[`withBannerAlertState(BpkBannerAlertExpandable) should render correctly collapsed 1`] = `
<BpkBannerAlertExpandable
  animateOnEnter={false}
  animateOnLeave={false}
  bannerClassName={null}
  expanded={false}
  message="Lorem ipsum dolor sit amet, consectetuer adipiscing elit."
  onDismiss={[Function]}
  onExpandToggle={[Function]}
  show={true}
  toggleButtonLabel="View more"
  type="success"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id
blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis
nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at. Mauris
porta varius ullamcorper. Sed laoreet libero mauris, non pretium lectus accumsan et. Suspendisse vehicula ullamcorper
sapien, et dapibus mi aliquet non. Pellentesque auctor sagittis lectus vitae rhoncus. Fusce id enim porttitor, mattis
ante in, vestibulum nulla.
</BpkBannerAlertExpandable>
`;

exports[`withBannerAlertState(BpkBannerAlertExpandable) should render correctly expanded 1`] = `
<BpkBannerAlertExpandable
  animateOnEnter={false}
  animateOnLeave={false}
  bannerClassName={null}
  expanded={true}
  message="Lorem ipsum dolor sit amet, consectetuer adipiscing elit."
  onDismiss={[Function]}
  onExpandToggle={[Function]}
  show={true}
  toggleButtonLabel="View more"
  type="success"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id
blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis
nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at. Mauris
porta varius ullamcorper. Sed laoreet libero mauris, non pretium lectus accumsan et. Suspendisse vehicula ullamcorper
sapien, et dapibus mi aliquet non. Pellentesque auctor sagittis lectus vitae rhoncus. Fusce id enim porttitor, mattis
ante in, vestibulum nulla.
</BpkBannerAlertExpandable>
`;
